<resources>
    <string name="app_name">Control Empleados</string>
    <string name="crearMarca">Marcar</string>
    <string name="listarMisMarcas">Mis marcas</string>
    <string name="ajustarDatos">Cambiar datos</string>
    <string name="salir">Salir</string>
    <string name="title_activity_envio_locacion">Envio Locacion</string>
    <string name="title_activity_tomar_foto">Tomar Foto</string>
    <string name="title_activity_ajustar_datos">AjustarDatos</string>
    <string name="title_activity_listar_mis_marcas">ListarMisMarcas</string>
    <string name="sign_in">Ingresar</string>
    <string name="resultado">Resultado</string>
    <string name="ent_intermedia">Ent Intermedia</string>
    <string name="entrada">Entrada</string>
    <string name="sal_intermedia">Sal Intermedia</string>
    <string name="salida">Salida</string>
    <string name="subir_foto">Subir foto</string>
    <string name="clave">Clave</string>
    <string name="ertec_control_de_empleados">Ertec Control de Empleados</string>
    <string name="ingresar">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="title_activity_envio_off_line">EnvioOffLine</string>
</resources>
