<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.juan.controlempleados.MainActivity">
    <item
        android:id="@+id/crearMarca"
        android:orderInCategory="100"
        android:title="@string/crearMarca"
        app:showAsAction="never" />
    <item
        android:id="@+id/ajustarDatos"
        android:orderInCategory="100"
        android:title="@string/ajustarDatos"
        app:showAsAction="never" />
    <item
        android:id="@+id/listarMisMarcas"
        android:orderInCategory="100"
        android:title="@string/listarMisMarcas"
        app:showAsAction="never" />
    <item
        android:id="@+id/salir"
        android:orderInCategory="100"
        android:title="@string/salir"
        app:showAsAction="never" />
</menu>
